Increasing inner container width in CSS to prevent wrapping of cloned items...

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ display:none;
 }
 .nbs-flexisel-ul {
     position:relative;
-    width:9999px;
+    width:99999px;
     margin:0px;
     padding:0px;
     list-style-type:none;   
